--- a/Assets/Soft Hub/SoftHub.Runtime.asmdef
+++ b/Assets/Soft Hub/SoftHub.Runtime.asmdef
@@ -2,7 +2,8 @@
     "name": "SoftGames.SoftHub",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:bee6223a87e3c3146b5a4133f0ad8a97"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
